# Universal-ML

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  HANDOVER_NOTE.md  LAUNCH_INSTRUCTIONS.md  Makefile  Manifest.toml  PROJECT_MAP.md  Project.toml  README.md  TOON_TRADE_PLAN_FIX.md  ToonMath.jl  UNIVERSAL_DEBUG_TOON_v1.1.md  accuracy_guardrail.py  autonomous_updater.sh  backtest_engine.py  banknifty_ultimate_features.txt  btcusdt_ultimate_features.txt  btcusdt_ultimate_features_1d.txt  cron_trainer.sh  daily_backtest_engine.py  daily_ml_engine.py  daily_volatility_backtest.py  daily_volatility_engine.py  execution_guardrail.py  holographic_engine.py  hyperparams.json  inference_bridge.py  instrument_registry.py  julia_bridge.py  live_inference.py  live_volatility_inference.py  main.py  meta_strategy_selector.py  ohlc_log_generator.pine  plot_vol_forecast.py  portfolio_sleeve_registry.json  pyproject.toml  (+10 more)
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
NIFTY/: nifty_ultimate_features.txt
SPX500/: spx500_VOL_live_forecast.json
dashboard/: package-lock.json  package.json  server.js
dashboard/src/: App.jsx  index.css
data_vault/: symbol_identity.py  vault_engine.py  yfinance_vault.py
inbox/: RV_V2_CODEX.md
ops/systemd/user/: universal-ml-vault-autosync.service
