[project]
name = "universal-ml"
version = "0.1.0"
description = "Geometry-driven multi-timeframe trading research and inference stack powered by Python and Julia."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib==1.5.3",
    "juliacall==0.9.31",
    "lightgbm==4.6.0",
    "matplotlib==3.10.8",
    "numba>=0.60.0",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "yfinance==1.2.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.9",
]

[tool.uv]
default-groups = ["dev"]
