[project]
name = "universal-ml"
version = "0.1.0"
description = "Geometry-driven multi-timeframe trading research and inference stack powered by Python and Julia."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib==1.5.3",
    "juliacall==0.9.31",
    "lightgbm==4.6.0",
    "matplotlib==3.10.8",
    "numba>=0.60.0",
    "numpy==2.4.3",
    "pandas==3.0.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "yfinance==1.2.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff==0.15.9",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C90",# mccabe
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E402", # module level import not at top of file (used heavily after warnings.filterwarnings)
    "E501", # line too long (strings in prints)
    "E701", # multiple statements on one line (used stylistically)
    "E741", # ambiguous variable name (e.g., l for low)
    "F841", # unused variables (dead code/future use allowed via AGENTS)
    "B904", # raise inside except without from
    "B905", # zip without strict parameter
    "B007", # loop control variable not used
    "UP038",# use X | Y in isinstance call instead of (X, Y)
]

[tool.ruff.lint.mccabe]
max-complexity = 31
